Refactor Router and Service Structure
- Renamed Router module from EA.Telegram.Router.Router to EA.Telegram.App.Router for clarity.
- Updated project file to reflect new Router module structure and consolidated service router files.
- Modified Controller.fs files in culture and embassies features to use request instead of method for better clarity.
- Enhanced Dependencies.fs in embassies feature to include getServices and getUserServices methods with TODO comments for implementation.
- Updated Query.fs in embassies services to utilize new getServices and getUserServices methods.
- Removed obsolete Get.fs, Method.fs, and other related files in services router structure.
- Introduced new Router.fs files for services, italian, and russian features to streamline routing logic.
- Implemented detailed routing logic for Russian and Midpass services, including Get, Post, and Delete operations.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,22 +28,15 @@
     <Compile Include="features\embassies\Router.fs" />
     <Compile Include="features\embassies\services\Query.fs" />
     <Compile Include="features\embassies\Controller.fs" />
-    <Compile Include="features\services\router\Get.fs" />
-    <Compile Include="features\services\router\russian\kdmid\Get.fs" />
-    <Compile Include="features\services\router\russian\kdmid\Post.fs" />
-    <Compile Include="features\services\router\russian\kdmid\Delete.fs" />
-    <Compile Include="features\services\router\russian\kdmid\Method.fs" />
-    <Compile Include="features\services\router\russian\midpass\Get.fs" />
-    <Compile Include="features\services\router\russian\midpass\Post.fs" />
-    <Compile Include="features\services\router\russian\midpass\Delete.fs" />
-    <Compile Include="features\services\router\russian\midpass\Method.fs" />
-    <Compile Include="features\services\router\russian\Method.fs" />
+    <Compile Include="features\services\router\russian\kdmid\Router.fs" />
+    <Compile Include="features\services\router\russian\midpass\Router.fs" />
+    <Compile Include="features\services\router\russian\Router.fs" />
     <Compile Include="features\services\router\italian\prenotami\Get.fs" />
     <Compile Include="features\services\router\italian\prenotami\Post.fs" />
     <Compile Include="features\services\router\italian\prenotami\Delete.fs" />
-    <Compile Include="features\services\router\italian\prenotami\Method.fs" />
-    <Compile Include="features\services\router\italian\Method.fs" />
-    <Compile Include="features\services\router\Method.fs" />
+    <Compile Include="features\services\router\italian\prenotami\Router.fs" />
+    <Compile Include="features\services\router\italian\Router.fs" />
+    <Compile Include="features\services\router\Router.fs" />
     <Compile Include="features\services\deps\Dependencies.fs" />
     <Compile Include="features\services\deps\russian\Russian.fs" />
     <Compile Include="features\services\deps\russian\Midpass.fs" />
