Refactor Italian and Russian service dependencies
- Removed obsolete Prenotami, Kdmid, Midpass, and Russian service files.
- Consolidated Italian and Russian service dependencies into new modules.
- Updated routing logic to reflect new module structure.
- Enhanced request processing and subscription handling in Italian and Russian services.
- Improved code organization and readability by restructuring service dependencies.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -31,18 +31,15 @@
     <Compile Include="features\services\router\russian\kdmid\Router.fs" />
     <Compile Include="features\services\router\russian\midpass\Router.fs" />
     <Compile Include="features\services\router\russian\Router.fs" />
-    <Compile Include="features\services\router\italian\prenotami\Get.fs" />
-    <Compile Include="features\services\router\italian\prenotami\Post.fs" />
-    <Compile Include="features\services\router\italian\prenotami\Delete.fs" />
     <Compile Include="features\services\router\italian\prenotami\Router.fs" />
     <Compile Include="features\services\router\italian\Router.fs" />
     <Compile Include="features\services\router\Router.fs" />
     <Compile Include="features\services\deps\Dependencies.fs" />
-    <Compile Include="features\services\deps\russian\Russian.fs" />
-    <Compile Include="features\services\deps\russian\Midpass.fs" />
-    <Compile Include="features\services\deps\russian\Kdmid.fs" />
-    <Compile Include="features\services\deps\italian\Italian.fs" />
-    <Compile Include="features\services\deps\italian\Prenotami.fs" />
+    <Compile Include="features\services\deps\russian\Dependencies.fs" />
+    <Compile Include="features\services\deps\russian\midpass\Dependencies.fs" />
+    <Compile Include="features\services\deps\russian\kdmid\Dependencies.fs" />
+    <Compile Include="features\services\deps\italian\Dependencies.fs" />
+    <Compile Include="features\services\deps\italian\prenotami\Dependencies.fs" />
     <Compile Include="features\services\services\russian\kdmid\Query.fs" />
     <Compile Include="features\services\services\russian\kdmid\Command.fs" />
     <Compile Include="features\services\services\russian\midpass\Query.fs" />
