feat: Implement Russian services for Kdmid and Midpass
- Added routing and command handling for Kdmid service, including manual requests, auto notifications, and appointment confirmations.
- Introduced dependencies and query handling for Kdmid service.
- Developed routing and command handling for Midpass service, including status checks and subscription management.
- Created structured response messages for user interactions with both Kdmid and Midpass services.
- Enhanced error handling and logging for service operations.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,27 +28,27 @@
     <Compile Include="features\embassies\Router.fs" />
     <Compile Include="features\embassies\services\Query.fs" />
     <Compile Include="features\embassies\Controller.fs" />
-    <Compile Include="features\services\router\russian\kdmid\Router.fs" />
-    <Compile Include="features\services\router\russian\midpass\Router.fs" />
-    <Compile Include="features\services\router\russian\Router.fs" />
-    <Compile Include="features\services\router\italian\prenotami\Router.fs" />
-    <Compile Include="features\services\router\italian\Router.fs" />
-    <Compile Include="features\services\router\Router.fs" />
-    <Compile Include="features\services\deps\Dependencies.fs" />
-    <Compile Include="features\services\deps\russian\Dependencies.fs" />
-    <Compile Include="features\services\deps\russian\midpass\Dependencies.fs" />
-    <Compile Include="features\services\deps\russian\kdmid\Dependencies.fs" />
-    <Compile Include="features\services\deps\italian\Dependencies.fs" />
-    <Compile Include="features\services\deps\italian\prenotami\Dependencies.fs" />
-    <Compile Include="features\services\services\russian\kdmid\Query.fs" />
-    <Compile Include="features\services\services\russian\kdmid\Command.fs" />
-    <Compile Include="features\services\services\russian\midpass\Query.fs" />
-    <Compile Include="features\services\services\russian\midpass\Command.fs" />
-    <Compile Include="features\services\services\russian\Query.fs" />
-    <Compile Include="features\services\services\italian\prenotami\Query.fs" />
-    <Compile Include="features\services\services\italian\prenotami\Command.fs" />
-    <Compile Include="features\services\services\italian\Query.fs" />
-    <Compile Include="features\services\services\Query.fs" />
+    <Compile Include="features\services\Dependencies.fs" />
+    <Compile Include="features\services\Router.fs" />
+    <Compile Include="features\services\russian\Dependencies.fs" />
+    <Compile Include="features\services\russian\Query.fs" />
+    <Compile Include="features\services\russian\kdmid\Router.fs" />
+    <Compile Include="features\services\russian\midpass\Router.fs" />
+    <Compile Include="features\services\russian\midpass\Dependencies.fs" />
+    <Compile Include="features\services\russian\kdmid\Dependencies.fs" />
+    <Compile Include="features\services\russian\kdmid\Query.fs" />
+    <Compile Include="features\services\russian\kdmid\Command.fs" />
+    <Compile Include="features\services\russian\Router.fs" />
+    <Compile Include="features\services\russian\midpass\Command.fs" />
+    <Compile Include="features\services\russian\midpass\Query.fs" />
+    <Compile Include="features\services\italian\prenotami\Router.fs" />
+    <Compile Include="features\services\italian\Router.fs" />
+    <Compile Include="features\services\italian\Dependencies.fs" />
+    <Compile Include="features\services\italian\prenotami\Dependencies.fs" />
+    <Compile Include="features\services\italian\prenotami\Query.fs" />
+    <Compile Include="features\services\italian\prenotami\Command.fs" />
+    <Compile Include="features\services\italian\Query.fs" />
+    <Compile Include="features\services\Query.fs" />
     <Compile Include="features\services\Controller.fs" />
     <Compile Include="app\Router.fs" />
     <Compile Include="app\Controller.fs" />
