Refactor service routing and dependencies for Italian and Russian features
- Updated tasks.json to enhance presentation settings for build tasks.
- Modified embassy-access-telegram.fsproj to include new router services for Italian and Russian features.
- Created Controller.fs to handle responses for Russian and Italian services.
- Implemented new Router.fs files for Italian and Russian services, including submodules for Prenotami and Kdmid.
- Added query and command handling for Russian Kdmid and Midpass services.
- Refactored Italian service routing to streamline endpoint handling.
- Improved dependency management in Dependencies.fs for better service integration.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,13 @@
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": false
+            }
         },
         {
             "label": "build-release",
@@ -25,7 +31,13 @@
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": false
+            }
         },
         {
             "label": "publish-telegram",
@@ -39,7 +51,13 @@
                 "--output",
                 "${workspaceFolder}/publish/telegram"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": false
+            }
         },
         {
             "label": "publish-worker",
@@ -53,7 +71,13 @@
                 "--output",
                 "${workspaceFolder}/publish/worker"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": false
+            }
         },
         {
             "label": "publish-all",
@@ -73,7 +97,13 @@
                 "--project",
                 "${workspaceFolder}/src/embassy-access-telegram/embassy-access-telegram.fsproj"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated",
+                "showReuseMessage": false,
+                "clear": false
+            }
         }
     ]
 }
