--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,28 +28,28 @@
     <Compile Include="features\embassies\Router.fs" />
     <Compile Include="features\embassies\services\Query.fs" />
     <Compile Include="features\embassies\Controller.fs" />
+    <Compile Include="features\router\services\Router.fs" />
+    <Compile Include="features\router\services\russian\Router.fs" />
+    <Compile Include="features\router\services\russian\kdmid\Router.fs" />
+    <Compile Include="features\router\services\russian\midpass\Router.fs" />
+    <Compile Include="features\router\services\italian\Router.fs" />
+    <Compile Include="features\router\services\italian\prenotami\Router.fs" />
     <Compile Include="features\services\Dependencies.fs" />
-    <Compile Include="features\services\Router.fs" />
     <Compile Include="features\services\russian\Dependencies.fs" />
-    <Compile Include="features\services\russian\Query.fs" />
-    <Compile Include="features\services\russian\kdmid\Router.fs" />
-    <Compile Include="features\services\russian\midpass\Router.fs" />
-    <Compile Include="features\services\russian\midpass\Dependencies.fs" />
     <Compile Include="features\services\russian\kdmid\Dependencies.fs" />
-    <Compile Include="features\services\russian\kdmid\Query.fs" />
-    <Compile Include="features\services\russian\kdmid\Command.fs" />
-    <Compile Include="features\services\russian\Router.fs" />
-    <Compile Include="features\services\russian\midpass\Command.fs" />
-    <Compile Include="features\services\russian\midpass\Query.fs" />
-    <Compile Include="features\services\italian\prenotami\Router.fs" />
-    <Compile Include="features\services\italian\Router.fs" />
+    <Compile Include="features\services\russian\midpass\Dependencies.fs" />
     <Compile Include="features\services\italian\Dependencies.fs" />
     <Compile Include="features\services\italian\prenotami\Dependencies.fs" />
+    <Compile Include="features\services\russian\kdmid\Query.fs" />
+    <Compile Include="features\services\russian\kdmid\Command.fs" />
+    <Compile Include="features\services\russian\midpass\Query.fs" />
+    <Compile Include="features\services\russian\midpass\Command.fs" />
+    <Compile Include="features\services\russian\Query.fs" />
     <Compile Include="features\services\italian\prenotami\Query.fs" />
     <Compile Include="features\services\italian\prenotami\Command.fs" />
     <Compile Include="features\services\italian\Query.fs" />
     <Compile Include="features\services\Query.fs" />
-    <Compile Include="features\services\Controller.fs" />
+    <Compile Include="features\controller\services\Controller.fs" />
     <Compile Include="app\Router.fs" />
     <Compile Include="app\Controller.fs" />
     <Compile Include="app\Client.fs" />
