--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,12 +28,12 @@
     <Compile Include="features\embassies\Router.fs" />
     <Compile Include="features\embassies\services\Query.fs" />
     <Compile Include="features\embassies\Controller.fs" />
-    <Compile Include="features\router\services\Router.fs" />
-    <Compile Include="features\router\services\russian\Router.fs" />
-    <Compile Include="features\router\services\russian\kdmid\Router.fs" />
-    <Compile Include="features\router\services\russian\midpass\Router.fs" />
-    <Compile Include="features\router\services\italian\Router.fs" />
-    <Compile Include="features\router\services\italian\prenotami\Router.fs" />
+    <Compile Include="features\services\router\russian\kdmid\Router.fs" />
+    <Compile Include="features\services\router\russian\midpass\Router.fs" />
+    <Compile Include="features\services\router\russian\Router.fs" />
+    <Compile Include="features\services\router\italian\prenotami\Router.fs" />
+    <Compile Include="features\services\router\italian\Router.fs" />
+    <Compile Include="features\services\router\Router.fs" />
     <Compile Include="features\services\Dependencies.fs" />
     <Compile Include="features\services\russian\Dependencies.fs" />
     <Compile Include="features\services\russian\kdmid\Dependencies.fs" />
@@ -49,7 +49,7 @@
     <Compile Include="features\services\italian\prenotami\Command.fs" />
     <Compile Include="features\services\italian\Query.fs" />
     <Compile Include="features\services\Query.fs" />
-    <Compile Include="features\controller\services\Controller.fs" />
+    <Compile Include="features\services\Controller.fs" />
     <Compile Include="app\Router.fs" />
     <Compile Include="app\Controller.fs" />
     <Compile Include="app\Client.fs" />
