Refactor routing structure for embassy services
- Updated project file to reflect new routing structure for Russian and Italian services.
- Removed redundant router files and consolidated routing logic into a unified structure.
- Adjusted service command and query files to align with new routing paths.
- Cleaned up unnecessary module references and improved code organization for better maintainability.

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,12 +28,12 @@
     <Compile Include="features\embassies\Router.fs" />
     <Compile Include="features\embassies\services\Query.fs" />
     <Compile Include="features\embassies\Controller.fs" />
-    <Compile Include="features\services\router\russian\kdmid\Router.fs" />
-    <Compile Include="features\services\router\russian\midpass\Router.fs" />
-    <Compile Include="features\services\router\russian\Router.fs" />
-    <Compile Include="features\services\router\italian\prenotami\Router.fs" />
-    <Compile Include="features\services\router\italian\Router.fs" />
-    <Compile Include="features\services\router\Router.fs" />
+    <Compile Include="features\services\russian\kdmid\Router.fs" />
+    <Compile Include="features\services\russian\midpass\Router.fs" />
+    <Compile Include="features\services\russian\Router.fs" />
+    <Compile Include="features\services\italian\prenotami\Router.fs" />
+    <Compile Include="features\services\italian\Router.fs" />
+    <Compile Include="features\services\Router.fs" />
     <Compile Include="features\services\Dependencies.fs" />
     <Compile Include="features\services\russian\Dependencies.fs" />
     <Compile Include="features\services\russian\kdmid\Dependencies.fs" />
