--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -5,7 +5,6 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="shared\Constants.fs" />
     <Compile Include="shared\Configuration.fs" />
     <Compile Include="shared\Router.fs" />
     <Compile Include="domain\Subscription.fs" />
@@ -25,24 +24,21 @@
     <Compile Include="features\culture\services\Command.fs" />
     <Compile Include="features\culture\Controller.fs" />
     <Compile Include="features\embassies\Dependencies.fs" />
-    <Compile Include="features\embassies\services\Query.fs" />
+    <Compile Include="features\embassies\russian\Dependencies.fs" />
+    <Compile Include="features\embassies\russian\kdmid\Dependencies.fs" />
+    <Compile Include="features\embassies\russian\midpass\Dependencies.fs" />
+    <Compile Include="features\embassies\italian\Dependencies.fs" />
+    <Compile Include="features\embassies\italian\prenotami\Dependencies.fs" />
+    <Compile Include="features\embassies\russian\kdmid\Query.fs" />
+    <Compile Include="features\embassies\russian\kdmid\Command.fs" />
+    <Compile Include="features\embassies\russian\midpass\Query.fs" />
+    <Compile Include="features\embassies\russian\midpass\Command.fs" />
+    <Compile Include="features\embassies\russian\Query.fs" />
+    <Compile Include="features\embassies\italian\prenotami\Query.fs" />
+    <Compile Include="features\embassies\italian\prenotami\Command.fs" />
+    <Compile Include="features\embassies\italian\Query.fs" />
+    <Compile Include="features\embassies\Query.fs" />
     <Compile Include="features\embassies\Controller.fs" />
-    <Compile Include="features\services\Dependencies.fs" />
-    <Compile Include="features\services\russian\Dependencies.fs" />
-    <Compile Include="features\services\russian\kdmid\Dependencies.fs" />
-    <Compile Include="features\services\russian\midpass\Dependencies.fs" />
-    <Compile Include="features\services\italian\Dependencies.fs" />
-    <Compile Include="features\services\italian\prenotami\Dependencies.fs" />
-    <Compile Include="features\services\russian\kdmid\Query.fs" />
-    <Compile Include="features\services\russian\kdmid\Command.fs" />
-    <Compile Include="features\services\russian\midpass\Query.fs" />
-    <Compile Include="features\services\russian\midpass\Command.fs" />
-    <Compile Include="features\services\russian\Query.fs" />
-    <Compile Include="features\services\italian\prenotami\Query.fs" />
-    <Compile Include="features\services\italian\prenotami\Command.fs" />
-    <Compile Include="features\services\italian\Query.fs" />
-    <Compile Include="features\services\Query.fs" />
-    <Compile Include="features\services\Controller.fs" />
     <Compile Include="app\Controller.fs" />
     <Compile Include="app\Client.fs" />
     <Compile Include="app\Initializer.fs" />
