feat: Add Kdmid and Midpass modules for Russian embassy access
- Implemented the AppointmentsPage, ConfirmationPage, InitialPage, and ValidationPage for handling appointment requests and confirmations.
- Created Common utilities for error handling and HTML parsing.
- Developed HTTP request handling for Kdmid services, including form data preparation and response parsing.
- Introduced Midpass client and data access layers for managing midpass requests.
- Refactored dependencies in Telegram features to align with new domain and data access structures for Italian and Russian embassies.
- Updated service implementations to utilize new domain models and data access patterns.

--- a/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
+++ b/src/embassy-access-modules/embassy-access-italian/embassy-access-italian.fsproj
@@ -4,12 +4,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="services\Router.fs" />
-    <Compile Include="services\prenotami\Domain.fs" />
-    <Compile Include="services\prenotami\DataAccess.fs" />
-    <Compile Include="services\prenotami\Client.fs" />
-    <Compile Include="services\prenotami\Web.BrowserWebApi.fs" />
-    <Compile Include="services\prenotami\Service.fs" />
+    <Compile Include="Router.fs" />
+    <Compile Include="prenotami\Domain.fs" />
+    <Compile Include="prenotami\DataAccess.fs" />
+    <Compile Include="prenotami\Client.fs" />
+    <Compile Include="prenotami\Web.BrowserWebApi.fs" />
+    <Compile Include="prenotami\Service.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\submodules\fsharp-web\src\fsharp-web.fsproj" />
